--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -67,3 +67,29 @@
 .why-choose {
     background: #f7fcff;
 }
+
+/* why choose section  */
+.why-choose-lg{
+    position: relative;
+}
+.why-choose-lg::before {
+    content: "";
+    background: url(../../images/shape/dot_bg.png);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+.why-choose-box .media-icon {
+    width: 65px;
+    background: #f5f5f5;
+    padding: 10px;
+    border-radius: 8px;
+}
+/* badges  */
+.badges-content p {
+    font-size: 15px;
+    line-height: 22px;
+    padding: 0 32px;
+    margin: 10px;
+}
