--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,6 +447,10 @@ span.circle2 {
     background: -moz-linear-gradient(top, #fffdf2 0%, #ffeff5 100%);
     background: -webkit-linear-gradient(top, #fffdf2 0%,#ffeff5 100%);
     background: linear-gradient(to bottom, #fffdf2 0%,#ffeff5 100%);}
+    .bg-gradient99 {background: #fff;
+        background: -moz-linear-gradient(top,#fff 0,#eef4fd 100%);
+        background: -webkit-linear-gradient(top,#fff 0,#eef4fd 100%);
+        background: linear-gradient(to bottom,#fff 0,#eef4fd 100%);}
     .classic-bg1{background: #fffef9;}
     .classic-bg2{background: #f3fffe;}
     .classic-bg3{background: #fef9ff;}
