--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1104,13 +1104,13 @@ ul.link-hover a:hover::after {
     margin-bottom: 20px;
 }
 
-.post-thum {
-    margin-right: 15px;
+.post-content {
+    margin: 0 0 0 20px;
 }
 
 .post-thum img {
-    width: 70px;
-    height: 70px;
+    width: 120px;
+    height: 80px;
     display: block;
     border-radius: 8px;
 }
